<resources>
    <string name="app_name">MediApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_catalogo">Catalogo</string>
    <string name="menu_usuarios">Usuarios</string>
    <string name="menu_configuracion">Configuracion</string>
    <string name="menu_proveedores">Proveedores</string>
    <string name="menu_ventas">Ventas</string>
    <string name="menu_productos">Productos</string>
    <string name="menu_cerrar">Cerrar Sesion</string>

</resources>