<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_Catalogo">

    <fragment
        android:id="@+id/nav_Catalogo"
        android:name="com.example.mediapp.ui.Catalogo.CatalogoFragment"
        android:label="@string/menu_catalogo"
        tools:layout="@layout/fragment_catalogo" />

    <fragment
        android:id="@+id/nav_Configuracion"
        android:name="com.example.mediapp.ui.Configuracion.ConfiguracionFragment"
        android:label="@string/menu_configuracion"
        tools:layout="@layout/fragment_configuracion" />

    <fragment
        android:id="@+id/nav_Usuarios"
        android:name="com.example.mediapp.ui.Usuarios.UsuariosFragment"
        android:label="@string/menu_usuarios"
        tools:layout="@layout/fragment_usuarios" />


    <fragment
        android:id="@+id/nav_Productos"
        android:name="com.example.mediapp.ui.Productos.ProductoFragment"
        android:label="@string/menu_productos"
        tools:layout="@layout/fragment_producto" >
        <action
            android:id="@+id/action_nav_Productos_self"
            app:destination="@id/nav_Productos" />
    </fragment>
</navigation>